--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>CV - [Ditt namn]</title>
+		<title>CV - Alec Bengtsson</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="Profilbild" /></span>
-					<h1 id="logo"><a href="#">[Ditt namn]</a></h1>
+					<h1 id="logo"><a href="#">Alec Bengtsson</a></h1>
 					<p>Miljöanalytiker</p>
 				</header>
 				<nav id="nav">
@@ -30,11 +30,8 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">E-post</span></a></li>
+						<li><a href="https://www.linkedin.com/in/alec-bengtsson-483b4333b/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="mailto:alec.28@live.se" class="icon solid fa-envelope"><span class="label">E-post</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -111,6 +108,11 @@
 								<div class="container">
 									<h3>Kontakta mig</h3>
 									<p>Om du vill veta mer eller diskutera ett potentiellt samarbete, tveka inte att höra av dig!</p>
+									<ul class="alt">
+										<li><strong>Telefon:</strong> 072-860 58 26</li>
+										<li><strong>E-post:</strong> <a href="mailto:alec.28@live.se">alec.28@live.se</a></li>
+										<li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/alec-bengtsson-483b4333b/">linkedin.com/in/alec-bengtsson</a></li>
+									</ul>
 									<form method="post" action="#">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Namn" /></div>
@@ -133,7 +135,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; [Ditt namn]. Alla rättigheter förbehållna.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Alec Bengtsson. Alla rättigheter förbehållna.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
