--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<li><a href="#one" class="active">Om mig</a></li>
 						<li><a href="#projects">Projekt jag är stolt över</a></li>
 						<li><a href="#two">Vad jag kan</a></li>
-						<li><a href="#three">Mina prestationer</a></li>
+						<li><a href="#three">Utbildning</a></li>
 						<li><a href="#four">Kontakt</a></li>
 					</ul>
 				</nav>
@@ -59,9 +59,7 @@
 
 						<!-- projects -->
 						<section id="projects">
-							<div class="image main" data-position="center">
-								<img src="images/banner.jpg" alt="Bannerbild" />
-							</div>
+							
 							<div class="container">
 								<header class="major">
 									<h2>Project</h2>
