--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">Om mig</a></li>
-						<li><a href="#projects">Projekt jag är stolt över</a></li>
+						<li><a href="projects.html">Projekt jag är stolt över</a></li>
 						<li><a href="#two">Vad jag kan</a></li>
 						<li><a href="#three">Utbildning</a></li>
 						<li><a href="#four">Kontakt</a></li>
@@ -57,19 +57,7 @@
 								</div>
 							</section>
 
-						<!-- projects -->
-						<section id="projects">
-							
-							<div class="container">
-								<header class="major">
-									<h2>Project</h2>
-									<p>Konvertering av bil till camper</p>
-								</header>
-								<p>Jag gillar att skapa projekt på min fritid vilket har lett mig till att få mycket kunskap på egen hand såsom:
-									Jag har konverterat min Toyota Prius till en campingbil genom att installera en 2500 watt strömväxelriktare, ett 100Ah LiFePO4-batteri och ett delad laddningsrelä med strömbrytare. Detta system möjliggör laddning av extrabatteriet från hybridbatteriet under körning, vilket ger en laddningseffekt på 400-500 watt. Ytterligare modifieringar inkluderar installation av ett 12V kylskåp och ombyggnad av baksätet med plywood till en sovplats.</p>
-							</div>
-						</section>
-
+						
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
