--- a/projects.html
+++ b/projects.html
@@ -29,13 +29,25 @@
             <section id="projects">
                 <div class="container">
                     <header class="major">
-                        <h2>Projekt jag är stolt över</h2>
-                        <p>Här är några av de projekt som jag har arbetat på och är särskilt stolt över:</p>
+                        <h2>Mina fritidsprojekt</h2>
+                        <p>Jag gillar att skapa projekt på min fritid, vilket har lett till att jag fått mycket kunskap på egen hand. Här är några exempel:</p>
                     </header>
                     <ul>
-                        <li><strong>Miljöövervakning i stor skala:</strong> Ledde ett projekt för att analysera miljöpåverkan i en stor region, vilket resulterade i förbättrade strategier för hållbarhet.</li>
-                        <li><strong>Hållbarhetsrapportering:</strong> Skapade en metod för att mäta och rapportera hållbarhet som används av flera företag i branschen.</li>
-                        <li><strong>Utbildning och föreläsningar:</strong> Har hållit flera utbildningar och föreläsningar om miljöanalys och hållbar utveckling för organisationer och universitet.</li>
+                        <li>
+                            <strong>Konverterad Toyota Prius:</strong> Installerade ett 2500 watt strömväxelriktare, ett 100Ah LiFePO4-batteri, delad laddningsrelä och fler modifieringar, vilket gjorde bilen till en campingvänlig lösning.
+                        </li>
+                        <li>
+                            <strong>Batteribyggnad:</strong> Erfarenhet av att lödda och punktsvetsa battericeller för elcyklar och el-longboards. Har skapat och demonterat över 10 batteripack.
+                        </li>
+                        <li>
+                            <strong>Renovering av 3D-skrivare:</strong> Har reparerat och sålt begagnade 3D-skrivare, byggt ett gott rykte med över 160 femstjärniga omdömen.
+                        </li>
+                        <li>
+                            <strong>Odling av igelkottstaggsvamp:</strong> Från inokulation av sporer till odling och skörd. Lärde mig att kontrollera fukt och luftflöde för optimal tillväxt.
+                        </li>
+                        <li>
+                            <strong>Andra projekt:</strong> Har experimenterat med airbrush-målning och bearbetning av 3D-utskrifter i både SLA och FDM. Är även passionerad om historia och lyssnar på historiska poddar.
+                        </li>
                     </ul>
                 </div>
             </section>
