--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
                             <strong>Odling av igelkottstaggsvamp:</strong> Från inokulation av sporer till odling och skörd. Lärde mig att kontrollera fukt och luftflöde för optimal tillväxt.
                         </li>
                         <li>
-                            <strong>Andra projekt:</strong> Har experimenterat med airbrush-målning och bearbetning av 3D-utskrifter i både SLA och FDM. Är även passionerad om historia och lyssnar på historiska poddar.
+                            <strong>Andra projekt:</strong> Har experimenterat med airbrush-målning och bearbetning av 3D-utskrifter i både SLA och FDM. 
                         </li>
                     </ul>
                 </div>
