--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 													<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>Mina prestationer</h3>
-									<p>Här är några av de projekt och prestationer jag är stolt över:</p>
+									<h3>Utbildning</h3>
+									<p>Här är några utbildningar som jag gått:</p>
 									<div class="features">
 										<article>
 											<!-- Första projektet -->
