--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
 							</section>
 
 						
-						<!-- Two -->
+													<!-- Two -->
 							<section id="two">
 								<div class="container">
 									<h3>Vad jag kan</h3>
-									<p>Här är några av de färdigheter och kompetenser jag kan erbjuda:</p>
+									<p>Här är några av de färdigheter och kompetenser jag har utvecklat genom mina studier och erfarenheter inom miljöanalys, hållbar utveckling och teknik:</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Miljödataanalys</li>
-										<li class="icon solid fa-cubes">Projektledning</li>
-										<li class="icon solid fa-book">Rapportskrivning</li>
-										<li class="icon solid fa-coffee">Teamwork</li>
-										<li class="icon solid fa-bolt">Problemlösning</li>
-										<li class="icon solid fa-users">Kundrådgivning</li>
+										<li class="icon solid fa-leaf">Miljöanalys och bedömning av påverkan</li>
+										<li class="icon solid fa-gavel">Miljörätt och lagstiftning</li>
+										<li class="icon solid fa-lightbulb">Hållbar utveckling och innovation</li>
+										<li class="icon solid fa-exclamation-triangle">Riskhantering och säkerhet</li>
+										<li class="icon solid fa-project-diagram">Projektledning och samarbete</li>
+										<li class="icon solid fa-chart-bar">Dataanalys och statistik</li>
 									</ul>
 								</div>
 							</section>
