--- a/index.html
+++ b/index.html
@@ -47,18 +47,27 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
-								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="Bannerbild" />
-								</div>
-								<div class="container">
-									<header class="major">
-										<h2>Om mig</h2>
-										<p>En passionerad miljöanalytiker med erfarenhet av hållbar utveckling och miljöövervakning.</p>
-									</header>
-									<p>Jag har arbetat med miljöanalys och hållbar utveckling i flera år. Mitt fokus ligger på att utveckla lösningar som minskar miljöpåverkan samtidigt som de främjar ekonomisk tillväxt. Jag har erfarenhet av att arbeta med både offentliga och privata organisationer.</p>
-								</div>
-							</section>
+<section id="one">
+    <div class="image main" data-position="center">
+        <img src="images/banner.jpg" alt="Bannerbild" />
+    </div>
+    <div class="container">
+        <header class="major">
+            <h2>Om mig</h2>
+            <p>En passionerad miljöanalytiker med ett stort intresse för DIY-projekt och tekniska lösningar. Jag strävar alltid efter att lära mig nytt och tillämpa min kunskap för att göra en positiv miljöpåverkan.</p>
+        </header>
+        <p>Jag är en person som älskar att skapa och bygga på min fritid. Genom egna projekt har jag utvecklat en djup teknisk förståelse och praktisk erfarenhet inom områden som energi, hållbarhet och teknik. Ett exempel på detta är när jag konverterade min Toyota Prius till en campingbil genom att installera ett solcellssystem, batteripack och flera andra tekniska modifieringar. Detta projekt har gett mig en god förståelse för hållbara energilösningar och hur man effektivt kan använda resurser för att skapa funktionella och miljövänliga system.</p>
+
+        <p>Jag har också erfarenhet av att arbeta med batteriteknik, där jag har lött och punktsvetsat battericeller för att skapa batteripack till elcyklar, el-longboards och andra liknande fordon. Genom att skapa och demontera över 10 batteripack har jag fått en djupgående förståelse för säker hantering och effektiv energiöverföring.</p>
+
+        <p>Utöver det har jag renoverat begagnade 3D-skrivare, köpt in skadade modeller, reparerat dem och sålt dem vidare. Denna process har inte bara gett mig teknisk insikt, utan också hjälpt mig att utveckla mitt entreprenörskap. Jag har byggt upp ett gott rykte genom att leverera kvalitet och få över 160 femstjärniga omdömen från nöjda kunder.</p>
+
+        <p>Jag är även intresserad av bioteknik och har odlat igelkottstaggsvamp genom att skapa en kontrollerad växtmiljö för mycelodling. Detta projekt har utvecklat min förståelse för biologiska processer och aseptiska tekniker, som jag nu tillämpar på fler av mina experiment och projekt.</p>
+
+        <p>För närvarande studerar jag miljövetenskap vid Linnéuniversitetet, där jag har fördjupat mig i områden som miljörätt, miljötoxikologi och hållbara energisystem. Genom mina studier och projekt har jag utvecklat en bred förståelse för de utmaningar och möjligheter som finns inom miljöanalys och hållbar utveckling.</p>
+    </div>
+</section>
+
 
 						
 													<!-- Two -->
