--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 											</a>
 											<div class="inner">
 												<h4>Linnéuniversitetet - Miljöanalytiker</h4>
-												<p>Min utbildning har omfattat en bred palett av ämnen, exempelvis i miljörätt fick jag lära mig om miljöbalken, som är ryggraden i svensk miljölagstiftning...</p>
+												<p>Min utbildning har omfattat en bred palett av ämnen, exempelvis i miljörätt fick jag lära mig om miljöbalken, som är ryggraden i svensk miljölagstiftning. Jag har studerat hur balken reglerar allt från markanvändning och vattenförvaltning till skydd av natur och kulturmiljö. Dessutom har jag fördjupat mig i EU-förordningar som REACH och CLP. REACH har gett mig insikter i hur kemikalier regleras under hela deras livscykel, från produktion till avfallshantering. CLP har i sin tur utrustat mig med kunskap om hur kemikalier ska klassificeras, märkas och förpackas för att säkerställa ett säkert hantering.</p>
 												<p>Skills: Environmental Impact Assessment · Life Cycle Assessment · Law · Critical Thinking · Environmental Toxicology</p>
 											</div>
 										</article>
@@ -109,7 +109,7 @@
 												<img src="images/pic02.jpg" alt="Projekt 2" />
 											</a>
 											<div class="inner">
-												<h4>Lunds Universitet</h4>
+												<h4>Lunds Universitet - Civilingenjör i Brandteknik </h4>
 												<p>Jag testade att studera 200% under en termin för att se om det var något för mig...</p>
 												<p>Skills: Data Collection · Microsoft Excel · Statistical Data Analysis · Fire Management · Mathematics</p>
 											</div>
@@ -120,8 +120,9 @@
 												<img src="images/pic03.jpg" alt="Projekt 3" />
 											</a>
 											<div class="inner">
-												<h4>Föreläsningar och utbildning</h4>
-												<p>I Analys A fördjupade jag mina kunskaper inom differentialekvationer och integralkalkyl...</p>
+												<h4>Malmö Universitet</h4>
+												<p>I Analys A fördjupade jag mina kunskaper inom differentialekvationer och integralkalkyl. Jag lärde mig att lösa olika typer av gränsvärdesproblem och att beräkna areor under kurvor. I kursen Modeller och verklighet för byggteknik fick jag en inblick i att analysera byggtekniska problem. Jag lärde mig att använda olika programvaror såsom REVIT genom att bygga ett mindre stuga.
+													Kursen Samhällsbyggnad och ingenjörsarbete gav mig en bred introduktion till byggbranschen. Jag fick lära mig om byggprocessen från idé till färdig byggnad, inklusive planering, projektering, byggande och underhåll. Jag fick också en ökad medvetenhet om de sociala, ekonomiska och miljömässiga aspekterna av samhällsbyggnad.</p>
 												<p>Skills: Data Analytics · Problem Solving · Mathematics · Revit · Computer-Aided Design (CAD)</p>
 											</div>
 										</article>
