--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<ul>
 						<li><a href="#one" class="active">Om mig</a></li>
 						
-						<li><a href="#two">Vad jag kan</a></li>
+						<li><a href="#two">Kortfattat vad jag kan bidra med</a></li>
 						<li><a href="#three">Utbildning</a></li>
 						<li><a href="#four">Kontakt</a></li>
 						<li><a href="projects.html">Projekt jag är stolt över</a></li>
