--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 													<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Vad jag kan</h3>
+									<h3>Kortfattat vad jag kan bidra med</h3>
 									<p>Här är några av de färdigheter och kompetenser jag har utvecklat genom mina studier och erfarenheter inom miljöanalys, hållbar utveckling och teknik:</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-leaf">Miljöanalys och bedömning av påverkan</li>
@@ -126,15 +126,15 @@
 													Kursen Samhällsbyggnad och ingenjörsarbete gav mig en bred introduktion till byggbranschen. Jag fick lära mig om byggprocessen från idé till färdig byggnad, inklusive planering, projektering, byggande och underhåll. Jag fick också en ökad medvetenhet om de sociala, ekonomiska och miljömässiga aspekterna av samhällsbyggnad.</p>
 												<p>Skills: Data Analytics · Problem Solving · Mathematics · Revit · Computer-Aided Design (CAD)</p>
 											</div>
+										</article>
+										<article>
 											<!-- Totalt -->
 											<a href="images/pic04_large.jpg" data-lightbox="projekt" class="image">
 												<img src="images/pic03.jpg" alt="Projekt 4" />
 											</a>
 											<div class="inner">
-												<h4>Malmö Universitet</h4>
-												<p>I Analys A fördjupade jag mina kunskaper inom differentialekvationer och integralkalkyl. Jag lärde mig att lösa olika typer av gränsvärdesproblem och att beräkna areor under kurvor. I kursen Modeller och verklighet för byggteknik fick jag en inblick i att analysera byggtekniska problem. Jag lärde mig att använda olika programvaror såsom REVIT genom att bygga ett mindre stuga.
-													Kursen Samhällsbyggnad och ingenjörsarbete gav mig en bred introduktion till byggbranschen. Jag fick lära mig om byggprocessen från idé till färdig byggnad, inklusive planering, projektering, byggande och underhåll. Jag fick också en ökad medvetenhet om de sociala, ekonomiska och miljömässiga aspekterna av samhällsbyggnad.</p>
-												<p>Skills: Data Analytics · Problem Solving · Mathematics · Revit · Computer-Aided Design (CAD)</p>
+												<h4>Totala Meritpoäng</h4>
+												
 											</div>
 										</article>
 									</div>
