--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="Profilbild" /></span>
 					<h1 id="logo"><a href="#">Alec Bengtsson</a></h1>
-					<p>Miljöanalytiker</p>
+					<p>Blivande Miljöanalytiker</p>
 				</header>
 				<nav id="nav">
 					<ul>
