--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="container">
         <header class="major">
             <h2>Om mig</h2>
-            <p>En passionerad miljöanalytiker med ett stort intresse för DIY-projekt och tekniska lösningar. Jag strävar alltid efter att lära mig nytt och tillämpa min kunskap för att göra en positiv miljöpåverkan.</p>
+            <p>En passionerad blivande miljöanalytiker med ett stort intresse för DIY-projekt och tekniska lösningar. Jag strävar alltid efter att lära mig nytt och tillämpa min kunskap för att göra en positiv miljöpåverkan.</p>
         </header>
         <p>Jag är en person som älskar att skapa och bygga på min fritid. Genom egna projekt har jag utvecklat en djup teknisk förståelse och praktisk erfarenhet inom områden som energi, hållbarhet och teknik. Ett exempel på detta är när jag konverterade min Toyota Prius till en campingbil genom att installera ett solcellssystem, batteripack och flera andra tekniska modifieringar. Detta projekt har gett mig en god förståelse för hållbara energilösningar och hur man effektivt kan använda resurser för att skapa funktionella och miljövänliga system.</p>
 
@@ -197,7 +197,14 @@
 					</section>
 
 			</div>
-
+<!-- Rubrik med länk till personligt brev -->
+<section id="personligt-brev">
+	<div class="container">
+	  <h3><a href="personligt-brev.html" target="_blank">Personligt brev - Liljemark</a></h3>
+	  <p>Klicka här för att läsa mitt personliga brev och ansökan till exjobb inom förorenade grönområden.</p>
+	</div>
+  </section>
+  
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
