--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">Om mig</a></li>
-						
 						<li><a href="#two">Kortfattat vad jag kan bidra med</a></li>
 						<li><a href="#three">Utbildning</a></li>
 						<li><a href="#four">Kontakt</a></li>
 						<li><a href="projects.html">Projekt jag är stolt över</a></li>
+						<li><a href="personligt-brev.html">Personligt brev - Liljemark</a></li>
 					</ul>
 				</nav>
 				<footer>
