--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Alec Bengtsson. Alla rättigheter förbehållna.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Alec Bengtsson. Alla rättigheter förbehållna.</li>
 							</ul>
 						</div>
 					</section>
